--- a/src/app/pages/landing/style.module.scss
+++ b/src/app/pages/landing/style.module.scss
@@ -2,8 +2,8 @@
     position: relative;
     display: flex;
     height: 100vh;
-    width: 100vw; // Ensure full screen width
-    margin: 0; // Avoid unwanted margins
+    width: 100vw; 
+    margin: 0; 
     overflow: hidden;
     margin-bottom: 100vh;
 
@@ -12,49 +12,61 @@
   
   .main video,
   .main img {
-    position: absolute; // Make it occupy the full viewport
+    position: absolute; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; // Ensures it covers the viewport without distortion
-    z-index: -1; // Keeps it behind other content
+    object-fit: cover; 
+    z-index: -1; 
   }
   
   .sliderContainer {
-    position: absolute;
-    top: calc(100vh - 350px);
-    z-index: 1; // Ensure it is above the video/image
+    z-index: 1; 
   }
   
   .textContainer {
-    display: flex;
-    flex-direction: column;
+    display: flex; 
     gap: 20px; 
+    align-items: flex-start; 
+    justify-content: center; 
     text-transform: uppercase; 
   }
-  
-//   .textContainer p {
-//     margin: 0;
-//     color: white;
-//     font-size: 110px;
-//     font-weight: 500;
-//     letter-spacing: 2px;
-//   }
-
-.firstText {
+  .firstText {
+    position: absolute;
+    top: 144px; 
+    left: 24px; 
     margin: 0;
     color: white;
-    font-size: 100px; 
-    font-weight: 700; 
-    font-family: 'zentry', sans-serif; 
+    font-size: 6vw; 
+    font-weight: 700;
+    font-family: 'zentry', sans-serif;
   }
   
   .secondText {
+    position: absolute;
+    bottom: 80px; 
+    right: 20px;
     margin: 0;
     color: white;
-    font-size: 120px; 
-    font-weight: 700; 
-    font-family: 'zentry', sans-serif; 
+    font-size: 6vw; 
+    font-weight: 700;
+    font-family: 'zentry', sans-serif;
+  }
+  
+  /* Tablet Screens */
+  @media (max-width: 1024px) {
+    .firstText,
+    .secondText {
+      font-size: 6vw; /* Slightly smaller for tablets */
+    }
+  }
+  
+  /* Phones */
+  @media (max-width: 768px) {
+    .firstText,
+    .secondText {
+      font-size: 5vw; /* Smaller for phones */
+    }
   }
   
