--- a/src/app/pages/landing/description.module.scss
+++ b/src/app/pages/landing/description.module.scss
@@ -35,7 +35,7 @@
             left: calc(100% - 200px); 
             width: 180px;
             height: 180px;
-            background-color: #1C1D20;
+            background-color: #455CE9;
             color: white;
             border-radius: 50%;
             position: absolute;
