--- a/src/app/pages/landing/description.module.scss
+++ b/src/app/pages/landing/description.module.scss
@@ -57,4 +57,41 @@
         border-radius: 40px;
         border: 1px solid grey;
     }
+
+     /* Mobile View Adjustments */
+    @media (max-width: 868px) {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 100px;
+
+    .body {
+      flex-direction: column; 
+      gap: 20px;
+      display: flex;
+      flex-direction: column;
+
+      p:nth-of-type(1) {
+        font-size: 24px; 
+        padding-right: 20px;
+      }
+
+      p:nth-of-type(2) {
+        font-size: 16px;
+        width: 50%; 
+        align-self: flex-start; 
+
+      }
+
+ 
+
+      .button {
+        width: 140px; 
+        height: 140px;
+        margin-top: -120px;
+        position: relative;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
 }
