--- a/src/app/pages/landing/services.module.css
+++ b/src/app/pages/landing/services.module.css
@@ -2,7 +2,7 @@
 .projects{
     position: relative;
     color: black;
-    margin-top: 25vh;
+    margin-top: 10vh;
     padding: 10%;
 }
 
@@ -15,12 +15,14 @@
 
 .imageContainer{
     position: relative;
-    height: 100%;
+    height: 90%;
     width: 40%;
 }
 
 .imageContainer img{
     object-fit: cover;
+    border-radius: 36px;
+
 }
 
 .column{
