--- a/src/app/pages/landing/style.module.scss
+++ b/src/app/pages/landing/style.module.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   width: 100vw;
   height: auto; 
-  margin: 0;
   overflow: visible;
   overflow-x: hidden;
 }
@@ -13,70 +12,105 @@
   position: relative; 
   width: 100%;
   height: 100vh; 
-  // overflow: hidden;
+  overflow: hidden;
+
 }
 
 .videoContainer video {
   width: 100%; 
   height: 100%; 
   object-fit: cover; 
+  position: relative;
+
 }
 
 .sliderContainer {
-  // position: absolute;
-  z-index: 1;
+  top: 0; 
+  position: absolute;
+  z-index: 3;
   width: 100%;
   height: 100%; 
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  // justify-content: center;
+  // flex-direction: column;
 }
 
 .textContainer {
   display: flex;
   flex-direction: column; 
-  gap: 20px; 
-  align-items: center;
+  align-items: left;
   text-transform: uppercase;
+
 }
+
 
 .firstText,
 .secondText {
-  color: rgb(255, 255, 255);
-  font-size: 6vw;
-  font-weight: 700;
-}
+  color: #f9f9f9;
+  font-size: 128px;
+  z-index: 4;
+  font-weight: 800;
+  
 
+}
 
 .firstText {
   position: relative;
-  margin-top: -844px; 
-  margin-left: -800px;
-  font-size: 6vw;
-
+  left: 0;
 }
 
 .secondText {
   position: relative;
-  margin-left: 800px;
-  font-size: 6vw;
-
+  right: 0;
+  margin-top:-172px;
+  
 
 }
+
+
+/* Tablet (768px to 1024px) */
+@media (max-width: 1024px) {
+  .firstText,
+  .secondText {
+    font-size: 96px;
+  }
+
+  .secondText {
+    margin-top:-140px;
+
+  }
+}
+
+/* Phone (below 768px) */
+@media (max-width: 768px) {
+  .firstText,
+  .secondText {
+    font-size: 64px; 
+    position: static; 
+  }
+
+  .secondText {
+    margin-top:-80px;
+
+  }
+}
+
 
 .descriptionSection {
   width: 100%;
   padding: 2rem;
   background-color: #f9f9f9; 
   height: 70vh; 
+  margin-top: -100px;
+
 
 }
 
 .servicesSection {
   width: 100%;
   padding: 2rem;
-  background-color: #f9f9f9; 
+  background-color: #f1f0f0; 
   height: 300vh; 
   margin-bottom: 100vh;
 }
