--- a/src/app/pages/landing/description.module.scss
+++ b/src/app/pages/landing/description.module.scss
@@ -4,6 +4,7 @@
     margin-top: 200px;
     display: flex;
     justify-content: center;
+    color: #f9f9f9;
     .body{
         max-width: 1400px;
         display: flex;
@@ -36,7 +37,7 @@
             width: 180px;
             height: 180px;
             background-color: #455CE9;
-            color: white;
+            color: #f9f9f9;
             border-radius: 50%;
             position: absolute;
             display: flex;
