--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -79,6 +79,7 @@
 }
 
 .button{
+  z-index: 4;
   top: 69%;
   left: 440px;
   width: 140px;
@@ -182,7 +183,7 @@
   color: #f9f9f9;
 
   // height: 100vh; 
-  padding-bottom: 50vh;
+  padding-bottom: 32vh;
   p {
     font-size: 5vh;
   }
@@ -190,8 +191,9 @@
 }
 
 .gallerySection {
-    margin-bottom: 100vh;
     background-color: black;
+    padding-bottom: 100vh;
+
 
 }
 
