--- a/src/app/pages/landing/jo-spo.module.scss
+++ b/src/app/pages/landing/jo-spo.module.scss
@@ -5,8 +5,12 @@
   
     h1{
       padding: 20px;
+      padding-left: 16vw;
+      padding-right: 16vw;
+
       font-size: 5vw; 
-      max-width: 80%;
+      max-width: 100%;
       font-weight: 400;
+      text-align: center;
     }
 }
