--- a/src/app/components/double/double.module.scss
+++ b/src/app/components/double/double.module.scss
@@ -14,9 +14,27 @@
       .stretchyWrapper{
         padding-bottom: 66%;
         position: relative;
+        overflow: hidden;
 
         img{
           object-fit: cover;
+          // border-radius: 256px; 
+          transform: scale(1.3) rotate(5deg); /* Zoom and rotate */
+          transform-origin: bottom; /* Keep rotation centered */
+
+
+
+        }
+      }
+
+      .stretchyWrapper2{
+        padding-bottom: 66%;
+        position: relative;
+
+        img{
+          object-fit: cover;
+          // border-radius: 256px; 
+
         }
       }
     }
