--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -183,7 +183,7 @@
   color: #f9f9f9;
 
   // height: 100vh; 
-  padding-bottom: 32vh;
+  padding-bottom: 12vh;
   p {
     font-size: 5vh;
   }
@@ -191,14 +191,16 @@
 }
 
 .gallerySection {
-    background-color: black;
-    padding-bottom: 100vh;
+    background-color: rgb(0, 0, 0);
+    padding-bottom: 32vh;
 
 
 }
 
 .jospoSection {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  padding-bottom: 32vh;
+
 
 }
 
