--- a/src/app/pages/landing/services2.module.scss
+++ b/src/app/pages/landing/services2.module.scss
@@ -1,5 +1,5 @@
 .project{
-    border-top: 2px solid #f9f9f9;
+    border-top: 1px solid #f9f9f9;
     padding-top: 0.8vw;
     padding-bottom: 0.8vw;
     cursor: pointer;
@@ -40,6 +40,6 @@
 }
 
 .spacing {
-    height: 100px; // Adjust the height to set the desired white space
-    width: 100%; // Ensures it spans the full width of the container
+    height: 100px; 
+    width: 100%; 
   }
