--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -6,6 +6,7 @@
   height: auto; 
   overflow: visible;
   overflow-x: hidden;
+  background-color: #000000;
 }
 
 .videoContainer {
@@ -167,32 +168,24 @@
 
 }
 
-// .servicesSection {
-//   width: 100%;
-//   padding: 2rem;
-//   // background-color: #f1f0f0; 
-//   background-color: black;
-//   height: 300vh; 
-// }
-
-
 .services2Section {
-  width: 100%;
+  width: 90%;
   // background-color: #f9f9f9; 
   background-color: #000000;
   color: #f9f9f9;
-
-  // height: 100vh; 
   padding-bottom: 12vh;
+  margin: 0 auto;
+
   p {
     font-size: 5vh;
   }
+
   
 }
 
 .gallerySection {
-    background-color: rgb(0, 0, 0);
-    padding-bottom: 32vh;
+    background-color: #000000;
+    padding-bottom: 24vh;
 
 
 }
