--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -165,7 +165,6 @@
   height: 90vh; 
   margin-top: -100px;
 
-
 }
 
 .services2Section {
@@ -173,7 +172,7 @@
   // background-color: #f9f9f9; 
   background-color: #000000;
   color: #f9f9f9;
-  padding-bottom: 12vh;
+  padding-top: 10vh;
   margin: 0 auto;
 
   p {
@@ -184,15 +183,16 @@
 }
 
 .gallerySection {
-    background-color: #000000;
-    padding-bottom: 24vh;
-
+    background-color: #ffffff;
+    padding-bottom: 1vh;
 
 }
 
+
+
 .jospoSection {
-  background-color: rgb(0, 0, 0);
-  padding-bottom: 32vh;
+  background-color: rgb(247, 247, 247);
+  padding-top: 24vh;
 
 
 }
