--- a/src/app/pages/landing/jo-spo.module.scss
+++ b/src/app/pages/landing/jo-spo.module.scss
@@ -1,6 +1,7 @@
 .main{
-    margin-top: 5vh;
-    color: white;
+    // margin-top: 5vh;
+    color: black;
+    background-color: rgb(247, 247, 247);
     padding-bottom: 10vh;
   
     h1{
