--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -3,58 +3,52 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: auto; 
+  height: auto;
   overflow: visible;
   overflow-x: hidden;
   background-color: #000000;
 }
 
 .videoContainer {
-  position: relative; 
+  position: relative;
   width: 100%;
-  height: 100vh; 
+  height: 100vh;
   overflow: hidden;
-
 }
 
 .videoContainer video {
-  width: 100%; 
-  height: 100%; 
-  object-fit: cover; 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   position: relative;
-
 }
 
 .sliderContainer {
-  top: 0; 
+  top: 0;
   position: absolute;
   z-index: 3;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   display: flex;
   align-items: center;
-  // justify-content: center;
-  // flex-direction: column;
 }
 
 .textContainer {
   display: flex;
-  flex-direction: column; 
-  align-items: left;
-
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 2vw;
 }
 
-
+/* Headline Text */
 .firstText,
 .secondText {
   color: #f9f9f9;
-  font-size: 128px;
+  font-size: clamp(32px, 8vw, 128px); /* Responsive font size */
   z-index: 4;
   font-weight: 800;
-  padding-left: 10px;
-
-  
-
+  padding-left: 0;
+  margin: 0;
 }
 
 .firstText {
@@ -65,96 +59,94 @@
 .secondText {
   position: relative;
   right: 0;
-  margin-top:-64px;
-  
-
+  margin-top: -0.5em;
 }
 
 .thirdText {
   color: #f9f9f9;
-  font-size: 20px;
+  font-size: clamp(14px, 2vw, 20px); /* Responsive font size */
   z-index: 4;
-  margin-top: -24px;
-  padding-left: 16px;
-  
+  margin-top: -12px;
+  padding-left: 0;
 }
 
-.button{
+/* Call to Action Button */
+.button {
   z-index: 4;
-  top: 69%;
-  left: 440px;
-  width: 140px;
-  height: 50px;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: clamp(120px, 20vw, 180px);
+  height: clamp(40px, 6vh, 60px);
   background-color: #455CE9;
   color: white;
   border-radius: 30px;
-  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  p{
-      margin: 0px;
-      font-size: 16px;
-      font-weight: 300;
-      position: relative;
-      z-index: 4;
-  }
+}
 
-
+.button p {
+  margin: 0;
+  font-size: clamp(14px, 1.5vw, 16px);
+  font-weight: 300;
+  position: relative;
+  z-index: 4;
 }
 
 
-/* Tablet (768px to 1024px) */
-@media (max-width: 1024px) {
-  .firstText,
-  .secondText {
-    font-size: 96px;
-  }
+// /* Tablet (768px to 1024px) */
+// @media (max-width: 1024px) {
+//   .firstText,
+//   .secondText {
+//     font-size: 96px;
+//   }
 
-  .secondText {
-    margin-top:-140px;
+//   .secondText {
+//     margin-top:-140px;
 
-  }
+//   }
 
-  .thirdText {
-    margin-top: -100px;
-    font-size: 18px;
-  }
+//   .thirdText {
+//     margin-top: -100px;
+//     font-size: 18px;
+//   }
 
-  .button{
-    top: 75%;
-    left: 2%;
-    width: 140px;
-    height: 50px;
-  }
-}
+//   .button{
+//     top: 75%;
+//     left: 2%;
+//     width: 140px;
+//     height: 50px;
+//   }
+// }
 
-/* Phone (below 768px) */
-@media (max-width: 768px) {
-  .firstText,
-  .secondText {
-    font-size: 64px; 
-    position: static; 
-  }
+// /* Phone (below 768px) */
+// @media (max-width: 768px) {
+//   .firstText,
+//   .secondText {
+//     font-size: 64px; 
+//     position: static; 
+//   }
 
-  .secondText {
-    margin-top:-80px;
+//   .secondText {
+//     margin-top:-80px;
 
-  }
+//   }
 
-  .thirdText {
-    margin-top: -70px;
-    font-size: 14px;
-  }
+//   .thirdText {
+//     margin-top: -70px;
+//     font-size: 14px;
+//   }
 
-  .button{
-    top: 68%;
-    left: 2%;
-    width: 140px;
-    height: 50px;
-  }
-}
+//   .button{
+//     top: 68%;
+//     left: 2%;
+//     width: 140px;
+//     height: 50px;
+//   }
+// }
 
 
 .descriptionSection {
