--- a/src/app/pages/landing/description.module.scss
+++ b/src/app/pages/landing/description.module.scss
@@ -1,7 +1,7 @@
 .description{
     padding-left: 200px;
     padding-right: 200px;
-    padding-top: 200px;
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     color: #f9f9f9;
