--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,44 +1,44 @@
-.main {
-  position: relative;
-  display: flex;
-  height: 100vh;
-  width: 100vw; // Ensure full screen width
-  margin: 0; // Avoid unwanted margins
-  overflow: hidden;
-}
+// .main {
+//   position: relative;
+//   display: flex;
+//   height: 100vh;
+//   width: 100vw; // Ensure full screen width
+//   margin: 0; // Avoid unwanted margins
+//   overflow: hidden;
+// }
 
-.main video,
-.main img {
-  position: absolute; // Make it occupy the full viewport
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; // Ensures it covers the viewport without distortion
-  z-index: -1; // Keeps it behind other content
-}
+// .main video,
+// .main img {
+//   position: absolute; // Make it occupy the full viewport
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover; // Ensures it covers the viewport without distortion
+//   z-index: -1; // Keeps it behind other content
+// }
 
-.sliderContainer {
-  position: absolute;
-  top: calc(100vh - 350px);
-  z-index: 1; // Ensure it is above the video/image
-}
+// .sliderContainer {
+//   position: absolute;
+//   top: calc(100vh - 350px);
+//   z-index: 1; // Ensure it is above the video/image
+// }
 
-.slider {
-  position: relative;
-  white-space: nowrap;
-}
+// .slider {
+//   position: relative;
+//   white-space: nowrap;
+// }
 
-.slider p {
-  margin: 0;
-  color: white;
-  font-size: 100px;
-  font-weight: 500;
-  padding-right: 50px;
-}
+// .slider p {
+//   margin: 0;
+//   color: white;
+//   font-size: 100px;
+//   font-weight: 500;
+//   padding-right: 50px;
+// }
 
-.slider p:nth-of-type(2) {
-  position: absolute;
-  left: 100%;
-  top: 0;
-}
+// .slider p:nth-of-type(2) {
+//   position: absolute;
+//   left: 100%;
+//   top: 0;
+// }
