--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -11,8 +11,12 @@
 .videoContainer {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
+  // fallback
+  @supports not (height: 100dvh) {
+    height: 100vh;
+  }
 }
 
 .videoContainer video {
