--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: auto;
   overflow: visible;
+  min-height: 100dvh;
   overflow-x: hidden;
 }
 
@@ -153,7 +154,7 @@
 .descriptionSection {
   width: 100%;
   padding: 2rem;
-  background-color: black; 
+  background-color: rgb(0, 0, 0); 
   // background-color: #262626;
   height: 90vh; 
   margin-top: -100px;
