--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -29,7 +29,7 @@
 
 .sliderContainer {
   top: 0;
-  // position: absolute;
+  position: absolute;
   z-index: 3;
   width: 100%;
   height: 100%;
@@ -153,11 +153,11 @@
 
 .descriptionSection {
   width: 100%;
-  padding: 2rem;
+  padding: 100px 2rem;
+  padding-bottom: 160px;
   background-color: rgb(0, 0, 0); 
   // background-color: #262626;
-  height: 90vh; 
-  margin-top: -100px;
+
 
 }
 
