--- a/src/app/pages/landing/description.module.scss
+++ b/src/app/pages/landing/description.module.scss
@@ -63,7 +63,7 @@
     @media (max-width: 868px) {
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 100px;
+    // margin-top: 100px;
 
     .body {
       flex-direction: column; 
