--- a/src/app/pages/landing/index.module.scss
+++ b/src/app/pages/landing/index.module.scss
@@ -12,14 +12,12 @@
 .videoContainer {
   position: relative;
   width: 100%;
-  height: calc(var(--initial-vh) * 100);
+  height: 100dvh;
   // overflow: hidden;
   // fallback
-  @supports not (height: calc(var(--initial-vh) * 100)) {
-    /* Fallback for browsers that don't support calc with custom properties */
+  @supports not (height: 100dvh) {
     height: 100vh;
   }
-
 }
 
 .videoContainer video {
