gallery words on landing page animation

--- a/src/app/pages/gallery/gallery.module.scss
+++ b/src/app/pages/gallery/gallery.module.scss
@@ -1,6 +1,6 @@
 .container{
-    margin-top: 10vh;
-    min-height: 100vh;
+    // margin-top: 10vh;
+    height: auto;
     background-color: gray;
 
     .body{
