--- a/src/app/pages/services/services.css
+++ b/src/app/pages/services/services.css
@@ -21,12 +21,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-left: 1em;
+
     
   }
   
   .about-hero .container h1 {
     font-size: 8vw;
-    width: 80%;
+    width: 100%;
     
   }
   
@@ -168,7 +170,7 @@
   .founder-voice .container {
     width: 50%;
     margin: 0 auto;
-    border-left: 1px solid rgba(255, 255, 255, 0.125);
+    /* border-left: 1px solid rgba(255, 255, 255, 0.125); */
   }
   
   .founder-voice .container h2 {
